kubernetes/main/apps/downloads/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    routed-gateway: "true"
