kubernetes/main/apps/downloads/policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: volsync-backups
  namespace: downloads
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
  egress:
    - to:
        - ipBlock:
            cidr: ${SECRET_HOMELAN_IPV4}
        - ipBlock:
            cidr: ${SECRET_HOMELAN_IPV6}
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-smtp
  namespace: downloads
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.22.25/32
        - ipBlock:
            cidr: fdd5:aa8:9535:22::25/128
  policyTypes:
    - Egress
